Swap round the social-tools div in the markup and then visually repair with css.
This fixes an overlap of content layout issue that came about due to using position: absolute; on the element.

--- a/mzalendo/core/static/sass/basic.scss
+++ b/mzalendo/core/static/sass/basic.scss
@@ -319,6 +319,8 @@ pre {
 }
 
 #page {
+  display:table;
+  caption-side:bottom;
   position:relative;
   margin-bottom:30px;
   .title-space {
@@ -570,6 +572,7 @@ pre {
     }
   }
   .social-and-tools {
+    display:table-caption;
     .fb-like,
     .twitter-share-button,
     iframe {
